--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+.details-header {
+  display: inline;
+  color: #263238;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 400;
+  line-height: 1.6;
+  letter-spacing: -0.05px;
+  text-transform: capitalize;
+  margin-right: 3px;
+  color: rgb(96, 109, 187);
+}
+
 .secondary {
   font-size: 13px !important;
   font-family: 'Montserrat, sans-serif' !important;
@@ -37,4 +50,8 @@
   color: red !important;
     font-size: 18px !important;
     font-family: 'Montserrat', sans-serif !important;
+}
+
+.divider {
+  margin-bottom: '5px';
 }
