--- a/src/views/CVE/ResultByCVE/ResultByCVE.css
+++ b/src/views/CVE/ResultByCVE/ResultByCVE.css
@@ -2,6 +2,12 @@
   padding: 10px;
 }
 
+.paper-border {
+  overflow: inherit;
+  margin-top: 16px;
+  border: 1px solid;
+  border-color: #de2546;
+}
 .base-score {
   display: inline;
   background: #3a75f9;
